Annotation processor base functionality provided