@@ -7,15 +7,18 @@
     <parent>
         <groupId>org.aujee.com</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}${changelist}</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>org.aujee.com.searchengine</groupId>
     <artifactId>tomcat</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
+
+    <properties>
+        <java.version>20</java.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -31,9 +34,57 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aujee.com</groupId>
+            <artifactId>lib</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
     <build>
+        <filters>
+            <filter>src/main/resources/env/application.${env}.properties</filter>
+        </filters>
+        <resources>
+            <resource>
+                <directory>target/generated-sources/annotations/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>*.properties</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin}</version>
+                <configuration>
+                    <release>${java.version}</release>
+                    <compilerArgs>
+                        <arg>-J--enable-preview</arg>
+                        <arg>-Xlint:processing,preview</arg>
+                    </compilerArgs>
+                    <encoding>UTF-8</encoding>
+                    <annotationProcessors>
+                        <annotationProcessor>
+                            org.aujee.com.shared.processor.StartUpProcessor
+                        </annotationProcessor>
+                    </annotationProcessors>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
